finalized CSS styling, removed breakpoint, fixed alignment

--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -5,10 +5,9 @@
     /* justify-content: space-evenly; */
     /* align-items: center; */
     width: 100%;
-    
     border-top: 3px solid green;
-    padding-top: 1.2%;
-    padding-bottom: 1%;
+    padding-top: 20px;
+    padding-bottom: 20px;
     display: flex;
     flex-direction: row;
     justify-content:center;
@@ -16,12 +15,12 @@
     align-items: center;
 }
 
-.contact {
-    text-align: center;
+#information {
     width: 100%;
+    text-align: center;
     
-    margin-right: 160px;
 }
+
 
 #phone {
     text-decoration: none;
@@ -33,29 +32,15 @@
     padding: 0;
 }
 
-#num {
-    width: 100%;
+#col {
+    padding: 0 ;
+    margin: 0 12px
 }
-
 
 img {
     display: block;
     height: 50px;
-    width: auto;
-}
-
-.vl {
-    border-left: 2px solid black;
-    margin: 0 80px;
-    height: 60px; 
-}
-
-
-
-@media (max-width: 1191px) {
-    .vl {
-        display: none;
-    }
+    width: 390px;
 }
 
 @media (max-width: 576px) {
